bug: 16966 Add the top margin to align the toolbar label with the toolbar buttons for searchList and mail quota on IE
http://bugzilla.zimbra.com/show_bug.cgi?id=16966

--- a/ZimbraWebClient/WebRoot/js/zimbraAdmin/config/style/zmadmin.css
+++ b/ZimbraWebClient/WebRoot/js/zimbraAdmin/config/style/zmadmin.css
@@ -699,4 +699,8 @@ div.ZaAdvancedSearchButton table {
 #ENDIF
 }
 
-
+.ZaSearchResultCountLabel {
+	#IFDEF MSIE
+		margin-top: 5px ;
+	#ENDIF
+}
